--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,34 +6,61 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/ContainerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        app:menu="@menu/bottom_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/tvBy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_width="21dp"
+        android:layout_height="17dp"
         android:text="TextView"
-        android:textSize="20sp"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/ivLogoKotders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivTitle"
-        tools:layout_editor_absoluteX="188dp"
+        app:layout_constraintVertical_bias="0.5"
         tools:text="by" />
 
     <ImageView
         android:id="@+id/ivTitle"
-        android:layout_width="382dp"
-        android:layout_height="177dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/Titulo"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="13dp" />
+        android:layout_width="405dp"
+        android:layout_height="245dp"
+        android:layout_marginTop="28dp"
+        android:src="@drawable/titulo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ivLogoKotders"
-        android:layout_width="148dp"
-        android:layout_height="67dp"
+        android:layout_width="128dp"
+        android:layout_height="55dp"
         android:layout_marginTop="5dp"
-        android:src="@drawable/LogoKotders"
-        app:layout_constraintTop_toBottomOf="@+id/tvBy"
-        tools:layout_editor_absoluteX="131dp" />
+        android:src="@drawable/logokotders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBy" />
 
     <ImageButton
         android:id="@+id/ibStart"
@@ -41,9 +68,12 @@
         android:layout_height="150dp"
         android:layout_marginTop="10dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/ButtonPlay"
-        app:layout_constraintTop_toBottomOf="@+id/ivLogoKotders"
-        tools:layout_editor_absoluteX="130dp" />
+        android:src="@drawable/baseline_play_circle_24"
+        android:contentDescription="Iniciar juego"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivLogoKotders" />
 
     <TextView
         android:id="@+id/tvPlay"
@@ -52,7 +82,9 @@
         android:layout_marginTop="5dp"
         android:text="Play"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/ibStart"
-        tools:layout_editor_absoluteX="186dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ibStart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
