--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/nav_options"
-        android:title="Opciones"
-        android:icon="@drawable/options"/>
+    <item android:id="@+id/nav_profile"
+        android:title="Perfil"
+        android:icon="@drawable/baseline_person_24"/>
 
-    <item android:id="@+id/nav_language"
-        android:title="Idioma"
-        android:icon="@drawable/baseline_language_24"/>
+    <item android:id="@+id/nav_classification"
+        android:title="Clasificación"
+        android:icon="@drawable/trophy_38"/>
 
     <item android:id="@+id/nav_googleplay"
         android:title="Google Play"
