--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.PiedraPapelTijeras" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-
-    <style name="Theme.PiedraPapelTijeras" parent="Base.Theme.PiedraPapelTijeras" />
-
+    <style name="Theme.PPT_Kotders" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
