--- a/app/src/main/res/layout/activity_historico.xml
+++ b/app/src/main/res/layout/activity_historico.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:backgroundTint="@color/white"
-    tools:context=".Historico">
+    tools:context=".activities.HistoricoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
