--- a/app/src/main/res/layout/juego.xml
+++ b/app/src/main/res/layout/juego.xml
@@ -31,7 +31,7 @@
             android:layout_marginLeft="100dp"
             android:layout_marginRight="10dp"
             android:fontFamily="@font/annie_use_your_telescope"
-            android:text="  TIEMPO :"
+            android:text="RONDA:"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="34sp"
             android:textStyle="bold" />
