--- a/app/src/main/res/layout/activity_solucion.xml
+++ b/app/src/main/res/layout/activity_solucion.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:backgroundTint="@color/white"
-    tools:context=".controllers.Menu">
+    tools:context=".Menu">
 
     <LinearLayout
         android:layout_width="match_parent"
