--- a/app/src/main/res/layout/activity_historico.xml
+++ b/app/src/main/res/layout/activity_historico.xml
@@ -20,13 +20,13 @@
 
         <Button
             android:id="@+id/btSalir"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="right"
             android:layout_margin="10dp"
             android:backgroundTint="#FFC107"
             android:fontFamily="@font/annie_use_your_telescope"
-            android:text="SALIR"
+            android:text="@string/bt_back"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/annie_use_your_telescope"
-            android:text="Mis Partidas"
+            android:text="@string/tx_my_games"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/teal_200"
