--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -8,13 +8,13 @@
 
     <Button
         android:id="@+id/btSalir"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="right"
         android:layout_margin="10dp"
         android:backgroundTint="#FFC107"
         android:fontFamily="@font/annie_use_your_telescope"
-        android:text="SALIR"
+        android:text="@string/bt_end_game"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -31,10 +31,11 @@
             android:layout_marginLeft="100dp"
             android:layout_marginRight="10dp"
             android:fontFamily="@font/annie_use_your_telescope"
-            android:text="RONDA:"
+            android:text="@string/tx_round"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="34sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textAlignment="textEnd"/>
 
         <TextView
             android:id="@+id/contadortv"
@@ -55,7 +56,7 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:fontFamily="@font/annie_use_your_telescope"
-        android:text="ESTADO"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="30sp"
@@ -95,10 +96,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:fontFamily="@font/annie_use_your_telescope"
-            android:text="MAQUINA"
+            android:text="@string/tx_machine"
             android:textColor="@color/teal_200"
             android:textSize="34sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/txtjugador"
@@ -107,7 +109,8 @@
             android:layout_marginLeft="35dp"
             android:layout_marginRight="50dp"
             android:fontFamily="@font/annie_use_your_telescope"
-            android:text="JUGADOR"
+            android:text="@string/tx_player"
+            android:textAlignment="center"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="34sp"
             android:textStyle="bold" />
@@ -153,7 +156,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="10dp"
         android:fontFamily="@font/annie_use_your_telescope"
-        android:text="ELIGE QUE QUIERES:"
+        android:text="@string/tx_choose"
         android:textColor="@color/purple_500"
         android:textSize="34sp"
         android:textStyle="bold" />
