--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,19 @@
         <ImageView
             android:id="@+id/imageView10"
             android:layout_width="match_parent"
-            android:layout_height="320dp"
+            android:layout_height="287dp"
             android:src="@drawable/ppt" />
 
         <EditText
             android:id="@+id/editTextText2"
+            android:shadowDx="@integer/material_motion_duration_long_1"
             android:layout_width="match_parent"
             android:layout_height="107dp"
             android:ems="10"
             android:fontFamily="sans-serif"
             android:hint="@string/user_txt"
             android:inputType="text"
+            android:layout_marginHorizontal="20dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="34sp" />
 
@@ -39,9 +41,41 @@
             android:layout_height="88dp"
             android:backgroundTint="@color/design_default_color_error"
             android:text="Login"
+            android:layout_marginHorizontal="20dp"
             android:textColor="@color/white"
             android:textSize="48sp"
             android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="69dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/holo_orange_dark"
+                android:fontFamily="@font/annie_use_your_telescope"
+                android:text="Español"
+                android:layout_marginHorizontal="20dp"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/holo_orange_light"
+                android:fontFamily="@font/annie_use_your_telescope"
+                android:text="English"
+                android:layout_marginHorizontal="20dp"
+                android:textColor="@color/teal_700"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imageView2"
