--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,43 +46,21 @@
             android:textSize="48sp"
             android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="10dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:id="@+id/SignInGoogle"
-            android:onClick="callSignInGoogle">
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/google"
+            android:text="Sign in with google"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:paddingLeft="30dp"
+            android:onClick="callSignInGoogle"
+            />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/white"
-                android:padding="10dp">
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="start"
-                    android:src="@drawable/google_button"
-                    android:layout_marginEnd="5dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Sign in with Google"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/black"/>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
