--- a/app/src/main/res/layout/activity_historico.xml
+++ b/app/src/main/res/layout/activity_historico.xml
@@ -18,18 +18,37 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <Button
-            android:id="@+id/btSalir"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:layout_margin="10dp"
-            android:backgroundTint="#FFC107"
-            android:fontFamily="@font/annie_use_your_telescope"
-            android:text="@string/bt_back"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btJugadores"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="40dp"
+                android:backgroundTint="#FFC107"
+                android:fontFamily="@font/annie_use_your_telescope"
+                android:text="@string/bt_bestplayers"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold"  />
+
+            <Button
+                android:id="@+id/btSalir"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:backgroundTint="#FFC107"
+                android:fontFamily="@font/annie_use_your_telescope"
+                android:text="@string/bt_back"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView4"
