--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imageUser"
                 android:layout_width="232dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
@@ -32,11 +32,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="166dp"
+                    android:id="@+id/nombreUser"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_weight="1"
@@ -48,7 +48,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/puntosUser"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -56,7 +56,7 @@
                     android:text="00"
                     android:textAllCaps="true"
                     android:textColor="@color/teal_700"
-                    android:textSize="34sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
