--- a/app/src/main/res/layout/activity_solucion.xml
+++ b/app/src/main/res/layout/activity_solucion.xml
@@ -67,7 +67,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:src="@drawable/continuar_1_" />
+            android:src="@drawable/logokotders" />
 
         <TextView
             android:id="@+id/textView"
