--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             android:backgroundTint="@color/white"
             android:drawableLeft="@drawable/google"
             android:onClick="callSignInGoogle"
+            android:layout_marginTop="30dp"
             android:paddingLeft="30dp"
             android:text="Sign in with google"
             android:textAlignment="center"
@@ -65,8 +66,8 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/continuar_1_" />
+            android:layout_height="200dp"
+            android:src="@drawable/logokotders" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
